Restyle page camera

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -411,7 +411,14 @@ header {
     width: auto;
     margin-right: 10px;
 }
-
+/* ----------------------------------------------- */
+/* CAM */
+/* ----------------------------------------------- */
+header .row #player {
+    width: 50%;
+    margin: auto auto;
+    padding-top: 5%;
+}
 
 /* ----------------------------------------------- */
 /* CITIES */
